@@ -1,12 +1,7 @@
 {
-  "count": 30,
+  "count": 29,
   "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2022-09-02T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-03T00:00:00Z",
       "count": 2,
@@ -64,7 +59,7 @@
     },
     {
       "timestamp": "2022-09-16T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
