@@ -1,3 +1,11 @@
+2022-09-16T16:23:01Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3069279693
+* notice: last 14d: unq all: 6 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 301 520 / 318 550
+* notice: next accum: outdated-unq outdated-all / unq all: 302 523 / 318 552
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-09-02] / [2022-09-16]
+
 2022-09-16T08:21:24Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3066413225
 * notice: last 14d: unq all: 6 30
